Fix page alignment by using fixed width instead of max-width

--- a/hugo/themes/liffstyle/assets/css/main.css
+++ b/hugo/themes/liffstyle/assets/css/main.css
@@ -37,9 +37,9 @@ body {
 }
 
 .container {
-  max-width: 65ch;
+  width: 65ch;
   margin: 0 auto;
-  padding: 0 2rem 2rem;
+  padding: 2rem;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -53,21 +53,25 @@ p {
   margin-bottom: 1.25em;
 }
 
-ul {
+main > ul {
   padding-left: 0;
-  list-style-position: inside;
+  margin-left: 0;
+  list-style-type: none;
 }
 
-ul ul {
-  padding-left: 1.5em;
+main > ul ul {
+  padding-left: 0;
+  margin-left: 1.5em;
   margin-top: 0.5em;
+  list-style-type: disc;
+  list-style-position: outside;
 }
 
 header {
 }
 
 .header-container {
-  max-width: 65ch;
+  width: 65ch;
   margin: 0 auto;
   padding: 2rem;
   display: flex;
